--- a/style.css
+++ b/style.css
@@ -94,14 +94,14 @@ p {
 }
 
 .call-of-duty .mwr-logo {
-  position: absolute;
+  position: sticky;
   width: 20%;
   height: auto;
   left: 10px;
 }
 
 .call-of-duty .codmw2cr-logo {
-  position: relative;
+  position: sticky;
   width: 70%;
   height: 50%;
   top: 0px;
@@ -122,7 +122,7 @@ p {
   margin: 0;
   padding: 0;
   align-items: center;
-  position: relative;
+  position: sticky;
   left: 1050px;
   top: -670px;
   width: 60%;
@@ -171,15 +171,15 @@ p {
 }
 
 .Scratch {
-  position: relative;
+  position: sticky;
   display: inline-block;
 }
 
 .Scratch > iframe {
-  position: relative;
+  position: sticky;
 }
 
 .Scratch > figcaption {
-  position: relative;
+  position: sticky;
   left: 400px;
 }
