--- a/style.css
+++ b/style.css
@@ -1,141 +1,94 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-* {
-  padding: 0;
-  margin: 0;
+*{
+  font-family: Roboto;
 }
-header {
+
+pre, p{
+  font-family: Roboto;
+}
+
+header{
+  animation: header-anim 2s;
   background-color: #3ff42f;
 }
 
-pre {
-  font-family: Roboto;
-}
-
-p {
-  font-family: Roboto;
-}
-
-.header-nav {
-  display: flex;
+.header-nav{
+  display:flex;
   justify-content: space-between;
   align-items: center;
   padding: 8px 16px;
-  color: #0000;
-  font-family: Roboto;
+  color: #000;
 }
 
-.header-nav a {
+.header-nav a{
   text-decoration: none;
   color: black;
 }
 
-.image-logo > a {
+.header-menu{
+  display:flex;
+  gap: 5vw;
+  gap: 28px; 
+}
+
+.header-menu a{
+  font-size: 24px;
+}
+
+.image-logo{
+  display: flex;
+  gap: 10px;
+  object-fit: cover;
+}
+
+.image-logo > img{
+  width: 24px;
+  object-fit: cover;
+}
+
+.image-logo a{
   font-weight: 600;
   font-size: 24px;
 }
 
-.image-logo {
-  display: flex;
-  gap: 4px;
-}
-
-.image-logo > img {
-  width: 24px;
-}
-
-.header-menu {
-  display: flex;
-  gap: 28px;
-}
-
-.header-menu a {
-  font-size: 24px;
-}
-
-.eacworksyt {
-  font-family: Roboto;
-}
-
-.about {
+.about{
   background-color: #55a85d;
-  font-family: Roboto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  animation: about-anim 2s;
 }
 
-.about > img {
+.about > img{
   width: 30%;
+  object-fit: cover;
+  animation: about-anim-img 2s;
 }
 
-.about .about-text {
+.about .about-text{
   width: 65%;
   font-size: 28px;
 }
 
-.call-of-duty {
-  background-color: #55a85d;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  font-family: Roboto;
+@keyframes about-anim{
+  from {background: white};
+  to {background-color: #55a85d};
 }
 
-.call-of-duty img {
-  width: 50%;
-  height: 50%;
+@keyframes about-anim-img{
+  from {opacity: 0};
+  to {opacity: 1};
 }
 
-.call-of-duty .codmw-series-logo {
-  max-width: 50%;
-  max-height: 50%;
-}
-
-.call-of-duty .mwr-logo {
-  position: sticky;
-  width: 20%;
-  height: auto;
-  left: 10px;
-}
-
-.call-of-duty .codmw2cr-logo {
-  position: sticky;
-  width: 70%;
-  height: 50%;
-  top: 0px;
-  left: 200px;
-}
-
-.call-of-duty .mw3-logo {
-  position: relative;
-  display: inline-block;
-  margin: 10px;
-  width: 40%;
-  height: auto;
-  top: -85px;
-  left: 700px;
-}
-
-.call-of-duty .call-of-duty-text {
-  margin: 0;
-  padding: 0;
-  align-items: center;
-  position: sticky;
-  left: 1050px;
-  top: -670px;
-  width: 60%;
-}
-
-.stumble-guys {
-  font-family: Roboto;
+.stumble-guys{
   font-size: 25px;
   gap: 20px;
   overflow: hidden;
 }
 
-.stumble-guys .stumble-guys-text {
+.stumble-guys .stumble-guys-text{
   margin: 0;
   padding: 0;
   justify-content: space-between;
@@ -143,43 +96,172 @@ p {
   width: 60%;
 }
 
-.stumble-guys > img {
+.stumble-guys > img{
   width: 1280px;
   height: 720px;
-  float: right;
+  float:right;
+  object-fit: cover;
 }
 
-.roblox {
-  font-family: Roboto;
+.stumble-guys .stumble-guys-logo{
+  position: relative;
+  top: 20px;
+}
+
+.call-of-duty{
+  width: auto;
+  height: auto;
+  background-color: #55a85d;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  animation: codanim 2s;
+}
+
+@keyframes codanim{
+  from {background-color: white};
+  to {background-color: #55a85d};
+}
+
+.call-of-duty img{
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+  position: sticky;
+}
+
+.call-of-duty .codmw-series-logo{
+  position: relative;
+  top: -1px;
+
+}
+
+.codmw-series-logo .mwr-logo{
+  position: relative;
+  top: 0px;
+  width: 20vw;
+  height: 10vh;
+}
+
+.codmw-series-logo .codmw2cr-logo{
+  position: relative;
+  top: -10vh; 
+  left: 10vw;
+  width: 35vw;
+  height: auto; 
+}
+
+.mw3-logo{
+  position: relative; 
+  top: -17vh; 
+  left: 34vw;
+  width: 20vw;
+  height: auto;
+}
+
+.call-of-duty-text{
+  position: relative;
+  top: -55vh;
+  left: 50vw;
+}
+
+@media (max-width: 768px) {
+  .codmw-series-logo .codmw2cr-logo {
+    width: 50vw;
+    height: auto;
+  }
+
+  .mw3-logo {
+    width: 40vw;
+    height: auto;
+  }
+}
+
+.roblox{
   overflow: hidden;
 }
 
-.roblox > img {
+.roblox > img{
   width: 1280px;
   height: 720px;
   float: right;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  object-fit: cover;
 }
 
-.roblox .roblox-logo {
+.roblox-logo{
+  position: sticky;
   display: flex;
-  width: 500px;
-  height: 300px;
-}
-
-.roblox .roblox-text {
-  font-size: 23px;
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
 }
 
 .Scratch {
   position: sticky;
   display: inline-block;
+  background-color: #FFD700;
 }
 
 .Scratch > iframe {
   position: sticky;
+  background-color: #FFD700;
 }
 
 .Scratch > figcaption {
   position: sticky;
   left: 400px;
+}
+
+@media (max-width: 1024px) {
+  .header-nav {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about .about-text {
+    font-size: 1.25rem;
+  }
+
+  .call-of-duty-text {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-menu {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .call-of-duty img,
+  .codmw-series-logo img {
+    max-width: 100%;
+  }
+
+  .about .about-text {
+    font-size: 1.1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .header-menu a {
+    font-size: 20px;
+  }
+
+  .about .about-text {
+    font-size: 1rem;
+  }
+
+  .stumble-guys img {
+    max-width: 100%;
+    height: auto;
+  }
 }
