about style.css

--- a/about style.css
+++ b/about style.css
@@ -14,10 +14,15 @@ header{
   background-color: #3ff42f;
 }
 
-.header-nav a:hover, .call-of-duty-text a:hover, .roblox-text a:hover, .stumble-guys-tezt a:hover{
+.header-nav a:hover, .call-of-duty-text a:hover, .roblox-text a:hover, .stumble-guys-text a:hover{
   border-color: #1f2937;
   background: #1f2937;
   color: #fff;
+}
+
+.roblox-text a, .call-of-duty-text a, .roblox-text a, .stumble-guys-text a{
+  text-decoration: none;
+  color: black;
 }
 
 .header-nav{
